# cs425_2025_09

./: README.md
examples/react/: README.md
examples/react/backend/: app.py  main.py  pyproject.toml
examples/react/frontend/: package-lock.json  package.json
examples/react/frontend/src/: Card.css  Card.tsx  CardHandler.css  CardHandler.tsx  main.tsx
examples/react/frontend/src/components/: Navigation.css  Navigation.tsx
examples/typescript/: greet.ts
examples/typescript/foundations/: generics.ts  scope.ts  structural-typing.ts  type-inference.ts  unions.ts
