[project]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.32.0,<1.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# linting
ruff = "^0.13.2"
mypy = "^1.18.2"

# unit testing
pytest = "^8.3.3"
pre-commit = "^4.3.0"

# web testing
selenium = "^4.36.0"
webdriver-manager = "^4.0.2"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests"
]


[tool.ruff]
line-length = 140